Drupal 7.95, 2023-03-15
-----------------------
- Fixed security issues:
   - SA-CORE-2023-004

Drupal 7.94, 2022-12-14
-----------------------
- Hotfix for book.module and Select query properties

Drupal 7.93, 2022-12-07
-----------------------
- Improved support for PHP 8.2
- Minimum PHP version changed to PHP 5.3
- Various security hardenings
- Various bug fixes, optimizations and improvements

Drupal 7.92, 2022-09-07
-----------------------
- Improved support for PHP 8.1
- Various security hardenings
- Various bug fixes, optimizations and improvements

Drupal 7.91, 2022-07-20
-----------------------
- Fixed security issues:
   - SA-CORE-2022-012

Drupal 7.90, 2022-06-01
-----------------------
- Improved support for PHP 8.1
- Improved support for PostgreSQL
- Various bug fixes, optimizations and improvements

Drupal 7.89, 2022-03-02
-----------------------
- Bug fixes for PHP 8.1
- Fix tests for PostgreSQL

Drupal 7.88, 2022-02-15
-----------------------
- Fixed security issues:
   - SA-CORE-2022-003

Drupal 7.87, 2022-01-19
-----------------------
- Fix regression caused by jQuery UI position() backport

Drupal 7.86, 2022-01-18
-----------------------
- Fixed security issues:
   - SA-CORE-2022-001
   - SA-CORE-2022-002

Drupal 7.85, 2022-01-12
-----------------------
- Fix session cookies for sites with different base_urls but a shared domain

Drupal 7.84, 2021-12-13
-----------------------
- Hotfix for session cookie domain on www subdomains

Drupal 7.83, 2021-12-01
-----------------------
- Initial support for PHP 8.1
- The has_js cookie has been removed (but can be re-enabled)
- The leading www. is no longer stripped from cookie domain by default
- The user entity now has a "changed" property
- Introduced a skip_permissions_hardening setting
- Changes to the password reset process to avoid email and username enumeration
- Various bug fixes, optimizations and improvements

Drupal 7.82, 2021-07-21
-----------------------
- Fixed security issues: