@@ -819,6 +819,20 @@ function image_style_deliver($style, $scheme = NULL) {
   array_shift($args);
   array_shift($args);
   $target = implode('/', $args);
+  $image_uri = $scheme . '://' . $target;
+  $image_uri = file_uri_normalize_dot_segments($image_uri);
+
+  if (file_stream_wrapper_valid_scheme($scheme)) {
+    $normalized_target = file_uri_target($image_uri);
+    if ($normalized_target !== FALSE) {
+      if (!in_array($scheme, variable_get('file_sa_core_2023_005_schemes', array()))) {
+        $parts = explode('/', $normalized_target);
+        if (array_intersect($parts, array('.', '..'))) {
+          return MENU_NOT_FOUND;
+        }
+      }
+    }
+  }
 
   // Check that the style is defined, the scheme is valid.
   $valid = !empty($style) && !empty($scheme) && file_stream_wrapper_valid_scheme($scheme);
@@ -830,7 +844,9 @@ function image_style_deliver($style, $scheme = NULL) {
   // variable from leaving the site vulnerable to the most serious attacks, a
   // token is always required when a derivative of a derivative is requested.)
   $token = isset($_GET[IMAGE_DERIVATIVE_TOKEN]) ? $_GET[IMAGE_DERIVATIVE_TOKEN] : '';
-  $token_is_valid = $token === image_style_path_token($style['name'], $scheme . '://' . $target);
+  $token_is_valid =
+    $token === image_style_path_token($style['name'], $image_uri)
+    || $token === image_style_path_token($style['name'], $scheme . '://' . $target);
   if (!variable_get('image_allow_insecure_derivatives', FALSE) || strpos(ltrim($target, '\/'), 'styles/') === 0) {
     $valid = $valid && $token_is_valid;
   }
@@ -838,14 +854,12 @@ function image_style_deliver($style, $scheme = NULL) {
     return MENU_ACCESS_DENIED;
   }
 
-  $image_uri = $scheme . '://' . $target;
-  
   // Core hack: substitute URI of derivative's original -JV
   // If the image being requested is a derivative of a raw image,
   // substitute the URI of the real raw image.
   $image_uri = bgimage_original_from_derivative_path($scheme, $target);
   // End core hack.
-  
+
   $derivative_uri = image_style_path($style['name'], $image_uri);
   $derivative_scheme = file_uri_scheme($derivative_uri);
 
@@ -1091,9 +1105,11 @@ function image_style_flush($style) {
  */
 function image_style_url($style_name, $path) {
   $uri = image_style_path($style_name, $path);
+  $uri = file_uri_normalize_dot_segments($uri);
 
   // The passed-in $path variable can be either a relative path or a full URI.
   $original_uri = file_uri_scheme($path) ? file_stream_wrapper_uri_normalize($path) : file_build_uri($path);
+  $original_uri = file_uri_normalize_dot_segments($original_uri);
 
   // The token query is added even if the 'image_allow_insecure_derivatives'
   // variable is TRUE, so that the emitted links remain valid if it is changed
@@ -1178,15 +1194,14 @@ function image_style_path($style_name, $uri) {
   // from derivative paths.
   $style_path = $scheme . '://styles/' . $style_name . '/' . $scheme . '/' . $path;
   $context = array(
-    'style_name' => $style_name,
-    'uri' => $uri,
-    'scheme' => $scheme,
-    'path' => $path,
+      'style_name' => $style_name,
+      'uri' => $uri,
+      'scheme' => $scheme,
+      'path' => $path,
   );
   drupal_alter('image_style_path', $style_path, $context);
   return $style_path;
   // End core hack.
-  
   return $scheme . '://styles/' . $style_name . '/' . $scheme . '/' . $path;
 }
 
